--- a/rabbitmq.yaml
+++ b/rabbitmq.yaml
@@ -1,25 +1,23 @@
-
-- hosts: localhost
-  connection: local
+- name: setup rabbitmq server
+  hosts: rabbitmq
   become: yes
   tasks:
-  - name: copy
+  - name: copy rabbitmq repo
     ansible.builtin.copy:
       src: rabbitmq.repo
       dest: /etc/yum.repos.d/rabbitmq.repo
 
-     
-  - name: install rabbitmq
+  - name: install rabbitmq server
     ansible.builtin.package:
-      name: rabbitmq-server 
+      name: rabbitmq-server
       state: present
 
-  - name: start and enable rabbitmq
+  - name: start and enable rabbitmq server
     ansible.builtin.service:
       name: rabbitmq-server
       state: started
       enabled: yes
-  
+
   - name: create and provide permissions to user
     community.rabbitmq.rabbitmq_user:
       user: roboshop
@@ -30,6 +28,3 @@
           read_priv: .*
           write_priv: .*
       state: present
-
-   
-   
