--- a/nginx.conf
+++ b/nginx.conf
@@ -48,7 +48,7 @@ http {
           try_files $uri /images/placeholder.jpg;
         }
         location /api/catalogue/ { proxy_pass http://catalogue.ashokking.sbs:8080/; }
-        location /api/user/ { proxy_pass http://user.ahokking.sbs:8080/; }
+        location /api/user/ { proxy_pass http://user.ashokking.sbs:8080/; }
         location /api/cart/ { proxy_pass http://cart.ashokking.sbs:8080/; }
         location /api/shipping/ { proxy_pass http://shipping.ashokking.sbs:8080/; }
         location /api/payment/ { proxy_pass http://payment.ashokking.sbs:8080/; }
